# OS_labs

Main/: main.cpp
Number/: Number.cpp
Vector/: Vector.cpp
lab_1_linux/: CMakeLists.txt
lab_1_linux/MyProject/Vector/: Vector.h
lab_1_linux/Number/: Number.h
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/: MathSystem.sln
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/MainApp1/: MainApp1.cpp  MainApp1.vcxproj.filters  MainApp1.vcxproj.xml
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/MainApp1/x64/Debug/: MainApp1.exe.recipe  MainApp1.ilk  vc143.idb
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/MainApp1/x64/Debug/MainApp1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/NumberLib/: Number.h  NumberLib.vcxproj.filters  NumberLib.vcxproj.xml
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/NumberLib/x64/Debug/: NumberLib.pch
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/NumberLib/x64/Debug/NumberLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/VectorLib/: Vector.h  VectorLib.vcxproj.filters  VectorLib.vcxproj.xml
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/VectorLib/x64/Debug/: VectorLib.dll.recipe  VectorLib.ilk  vc143.idb
lab_1_windows/MathSystem-20251004T094028Z-1-001/MathSystem/x64/Debug/: MainApp1.exp  MainApp1.lib  NumberLib.idb  NumberLib.lib
(+8 files in other folders)
